--- a/adventOfCode2023.csproj
+++ b/adventOfCode2023.csproj
@@ -26,6 +26,9 @@
     <None Update="Day1Input">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Day2Input">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
