--- a/adventOfCode2023.csproj
+++ b/adventOfCode2023.csproj
@@ -29,6 +29,9 @@
     <None Update="Day2Input">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Day3Input">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
