--- a/adventOfCode2023.csproj
+++ b/adventOfCode2023.csproj
@@ -44,6 +44,9 @@
     <None Update="Day7Input">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Day8Input">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
