--- a/adventOfCode2023.csproj
+++ b/adventOfCode2023.csproj
@@ -47,6 +47,9 @@
     <None Update="Day8Input">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Day9Input">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
