--- a/adventOfCode2023.csproj
+++ b/adventOfCode2023.csproj
@@ -50,6 +50,9 @@
     <None Update="Day9Input">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Day10Input">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
