--- a/adventOfCode2023.csproj
+++ b/adventOfCode2023.csproj
@@ -53,6 +53,9 @@
     <None Update="Day10Input">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Day11Input">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
